<resources>
    <string name="app_name" translatable="false">Calliope mini</string>
    <string name="title_home">Home</string>
    <string name="title_editors">Editors</string>
    <string name="title_help">Help</string>
    <string name="title_settings">Settings</string>
    <string name="title_info">Info</string>
    <string name="title_web" translatable="false">WEB</string>
    <string name="title_location_permission">LOCATION PERMISSION REQUIRED</string>
    <string name="title_bluetooth_permission">BLUETOOTH PERMISSION REQUIRED</string>
    <string name="title_notification_permission">NOTIFICATION PERMISSION REQUIRED</string>
    <string name="info_location_permission">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth devices.
        \n\nThis is because Bluetooth may be used to determine the phone\'s and user\'s location, <b>Calliope</b> will not use this information in any way.</string>
    <string name="info_bluetooth_permission">To use Bluetooth features to communicate APP with your <b>Calliope mini</b> you must granted several permissions.</string>
    <string name="title_camera_permission">CAMERA PERMISSION REQUIRED</string>
    <string name="info_camera_permission">Camera permission is required to use face recognition and camera features in Cardboard Face editor.</string>
    <string name="info_notification_permission">Click "Allow" to allow the app to send you notifications about the flashing status.</string>
    <string name="settings_btn_permission">Settings</string>
    <string name="action_btn_permission">Grant permission</string>
    <string name="title_make_code" translatable="false">MakeCode</string>
    <string name="title_roberta" translatable="false">Open Roberta Lab</string>
    <string name="title_blocks" translatable="false">Calliope mini Blocks</string>
    <string name="title_python" translatable="false">MicroPython</string>
    <string name="title_custom">Custom editor</string>
    <string name="title_cardboard_control" translatable="false">Cardboard Control</string>
    <string name="title_cardboard_face" translatable="false">Cardboard Face</string>
    <string name="title_campus" translatable="false">Calliope Campus</string>
    <string name="title_scripts">Your programs</string>
    <string name="info_make_code">The MakeCode editor enables full control over the Calliope mini and the integration of any external sensors through (custom) extensions. Programming can be done by arranging code blocks, using JavaScript, or Python.</string>
    <string name="info_roberta">In the "Open Roberta Lab," you learn to program with the graphical language NEPO!</string>
    <string name="info_python">MicroPython is a version of Python specifically adapted for microcontrollers. Python is an excellent first text-based programming language.</string>
    <string name="info_blocks">The Calliope mini Blocks editor enables programming of the Calliope mini using the Scratch programming language. This allows applications to be controlled on the computer with the Calliope mini and vice versa.</string>
    <string name="info_custom">Here you can enter to the custom editor.</string>
    <string name="info_campus">Calliope Campus combines all Calliope editors in a single environment with shared projects and direct control over the Calliope mini.</string>
    <string name="info_cardboard_control">Control your Calliope mini with Cardboard Control interface.</string>
    <string name="info_cardboard_face">Create and animate faces with the Cardboard Face editor.</string>
    <string name="info_scripts">Your programs will be here.</string>
    <string name="title_welcome">Let\'s Go</string>
    <string name="info_welcome">On this page you will learn how to get the Calliope mini up and running step by step. The first step shows you how to connect the Calliope mini correctly to the power supply.</string>
    <string name="title_battery">"Connect "</string>
    <string name="info_battery"><![CDATA[
    Before you can start, the Calliope mini must be powered.
    <br/>
    <br/>1. fill the battery compartment with two batteries of type <b>AAA</b>. Make sure that the batteries are aligned correctly.
    <br/>
    <br/>2. take the battery block provided and carefully insert the small, <b>white plastic end (JST connector)</b> into the battery connector attached to the Calliope mini.
    <br/>
    <br/>Make sure that the closed end of the plug is at the top with the raised part in the middle. If the cable connector fits easily into the battery connector on the board, it is correct.
    ]]></string>
    <string name="title_demo">Demo sequence</string>
    <string name="info_demo">
        <![CDATA[
        Meet the Calliope mini. The Calliope mini will show you on the display which input you should make.
        <br/>
        <br/>1. press the button <b>A</b>.
        <br/>2. press the button <b>B</b>.
        <br/>3. press the keys <b>A+B</b> simultaneously.
        <br/>4. The position sensor - shake the Calliope mini.
        <br/>5. Ready!
        ]]>
    </string>
    <string name="hello_text">Hello and welcome to the Calliope mini app!</string>
    <string name="info_app"><![CDATA[
    <br/>By using this app you can connect, code and flash programs to your <b>Calliope mini</b> via Bluetooth.
    ]]></string>
    <string name="info_app2"><![CDATA[
    <br/>You can find inspiring and fun projects at the Calliope website at <a href="https://calliope.cc">calliope.cc</a>!
    <br/>
    <br/>Have fun!
    ]]></string>
    <string name="info_app_text" translatable="false">
    Hello and welcome to the Calliope mini app!
    By using this app you can connect, code and flash programs to your Calliope mini via Bluetooth.
    </string>
    <string name="info_app_text2" translatable="false">
    You can find inspiring and fun projects at the Calliope website at https://calliope.cc!
    Have fun!
    </string>
    <string name="welcome">welcome</string>
    <string name="title_copy">Copy by USB</string>
    <string name="title_rename">Rename</string>
    <string name="title_share">Share</string>
    <string name="title_delete">Delete</string>
    <string name="button_save">Save</string>
    <string name="title_dialog_rename">Rename file</string>
    <string name="title_dialog_delete">Delete file</string>
    <string name="title_dialog_share">Share File</string>
    <string name="title_dialog_edit_link">Edit link</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_select">Select</string>
    <string name="button_ok">Ok</string>
    <string name="button_rename">Rename</string>
    <string name="button_continue">Continue</string>
    <string name="button_enable">Enable</string>
    <string name="button_remove">Remove</string>
    <string name="info_dialog_delete">You will permanently delete \"%s\".</string>
    <string name="subject_dialog_share">Sharing File…</string>
    <string name="text_dialog_share">Calliope mini firmware</string>
    <string name="title_select_editor">Editors</string>
    <string name="placeholder_menu_item" translatable="false">Menu Item</string>
    <string name="placeholder_demo_file" translatable="false">demo</string>
    <string name="placeholder_file_date" translatable="false">01.01.2022 11.25 - 2h. ago</string>
    <string name="placeholder_file_version" translatable="false">v2</string>
    <string name="content_description_menu_icon" translatable="false">menu_item_icon</string>
    <string name="content_description_menu_info" translatable="false">menu_item_info</string>
    <string name="error_no_connected">No Calliope mini connected</string>
    <string name="error_snackbar_name_exists">The file with this name exists</string>
    <string name="error_snackbar_bluetooth_disabled">Bluetooth is disable</string>
    <string name="error_snackbar_location_disable">Location is disable</string>
    <string name="error_snackbar_no_internet">No internet available</string>
    <string name="error_snackbar_download_error">Download error</string>
    <string name="error_snackbar_save_file_error">Save file error</string>
    <string name="open_hex_info">You are trying to open the \"%s\" file and flash it to your Calliope mini.
        \n\nIf you flash an incorrect or damaged file, you may have to connect your Calliope mini to the computer to reflash it.</string>
    <string name="open_hex_button">Flash</string>
    <string name="flashing_device_connecting">Device connecting…</string>
    <string name="flashing_device_connected">Device connected</string>
    <string name="flashing_process_starting">Process starting…</string>
    <string name="flashing_process_started">Process started</string>
    <string name="flashing_enabling_dfu_mode">Enabling DFU mode…</string>
    <string name="flashing_firmware_validating">Firmware validating…</string>
    <string name="flashing_device_disconnecting">Device disconnecting…</string>
    <string name="flashing_device_disconnected">Device disconnected</string>
    <string name="flashing_completed">Flashing completed</string>
    <string name="flashing_aborted">Flashing aborted</string>
    <string name="flashing_uploading">Uploading…</string>
    <string name="flashing_percent" translatable="false">%d%%</string>
    <string name="flashing_error">Error (%d): %s</string>
    <string name="flashing_connection_fail">Connection fail</string>
    <string name="flashing_status">Status %d</string>
    <string name="partial_flashing_starting">Partial flashing starting…</string>
    <string name="summary_custom">Link to the custom editor</string>
    <string name="summary_auto_flashing_on">Flashes automatically after download</string>
    <string name="summary_auto_flashing_off">Only saves the file</string>
    <string name="summary_rename_files_on">Appends (n) if file exists</string>
    <string name="summary_rename_files_off">Overwrites existing files</string>
    <string name="summary_partial_flashing_on">Enabled</string>
    <string name="summary_partial_flashing_off">Disabled</string>
    <string name="summary_background_flashing_on">Enabled</string>
    <string name="summary_background_flashing_off">Disabled</string>
    <string name="title_partial_flashing">Partial flashing</string>
    <string name="title_auto_flashing">Automatic flashing</string>
    <string name="title_background_flashing">Background flashing</string>
    <string name="title_rename_files">Rename files</string>
    <string name="title_editor_visibility">Editor visibility</string>
    <string name="summary_editor_visibility">Show or hide specific editors</string>
    <string name="title_show_makecode" translatable="false">MakeCode</string>
    <string name="title_show_roberta" translatable="false">Open Roberta Lab</string>
    <string name="title_show_blocks" translatable="false">Calliope mini Blocks</string>
    <string name="title_show_python" translatable="false">MicroPython</string>
    <string name="title_show_custom">Custom editor</string>
    <string name="title_show_cardboard_control" translatable="false">Cardboard Control</string>
    <string name="title_show_cardboard_face" translatable="false">Cardboard Face</string>
    <string name="summary_editor_visible">Editor is visible</string>
    <string name="summary_editor_hidden">Editor is hidden</string>
    <string name="title_custom_editor">Custom editor</string>
    <string name="title_editor_settings">Editor settings</string>
    <string name="summary_editor_settings">Configure editor visibility and custom links</string>
    <string name="title_info_category">Information</string>
    <string name="title_contact">Contacts</string>
    <string name="summary_contact" translatable="false">Calliope gGmbH</string>
    <string name="title_remove_all_devices">Remove All Calliope Mini</string>
    <string name="summary_remove_all_devices">Clear all connected Calliope Mini and bonds</string>
</resources>