<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/title_settings"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:key="pref_key_enable_auto_flashing"
            android:title="@string/title_auto_flashing"
            android:summaryOn="@string/summary_auto_flashing_on"
            android:summaryOff="@string/summary_auto_flashing_off"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <CheckBoxPreference
            android:key="pref_key_enable_partial_flashing"
            android:title="@string/title_partial_flashing"
            android:summaryOn="@string/summary_partial_flashing_on"
            android:summaryOff="@string/summary_partial_flashing_off"
            android:defaultValue="false"
            android:enabled="true"
            app:iconSpaceReserved="false"/>

        <CheckBoxPreference
            android:key="pref_key_enable_background_flashing"
            android:title="@string/title_background_flashing"
            android:summaryOn="@string/summary_background_flashing_on"
            android:summaryOff="@string/summary_background_flashing_off"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <CheckBoxPreference
            android:key="pref_key_rename_files"
            android:title="@string/title_rename_files"
            android:summaryOn="@string/summary_rename_files_on"
            android:summaryOff="@string/summary_rename_files_off"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <Preference
            android:key="pref_key_remove_all_devices"
            android:title="@string/title_remove_all_devices"
            android:summary="@string/summary_remove_all_devices"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_editors"
        app:iconSpaceReserved="false">

        <PreferenceScreen
            android:key="pref_key_editors_menu"
            android:title="@string/title_editor_settings"
            android:summary="@string/summary_editor_settings"
            app:iconSpaceReserved="false">
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_info_category"
        app:iconSpaceReserved="false">

        <Preference
            android:key="pref_key_help"
            android:title="@string/title_contact"
            android:summary="@string/summary_contact"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

</PreferenceScreen>