<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="cc.calliope.mini.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_home_to_info"
            app:destination="@id/navigation_info">
            <argument
                android:name="editorUrl"
                app:argType="string" />
            <argument
                android:name="editorName"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_editors"
        android:name="cc.calliope.mini.fragment.editors.EditorsFragment"
        android:label="@string/title_scripts"
        tools:layout="@layout/fragment_editors">

        <action
            android:id="@+id/action_editors_to_web"
            app:destination="@id/navigation_web">
            <argument
                android:name="editorUrl"
                app:argType="string" />
            <argument
                android:name="editorName"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_help"
        android:name="cc.calliope.mini.fragment.help.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help">
    </fragment>

    <fragment
        android:id="@+id/navigation_web"
        android:name="cc.calliope.mini.fragment.web.WebFragment"
        android:label="@string/title_web"
        tools:layout="@layout/fragment_web" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="cc.calliope.mini.fragment.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="cc.calliope.mini.fragment.settings.SettingsFragment"
        android:label="@string/title_settings" >

        <action
            android:id="@+id/action_settings_to_help"
            app:destination="@id/navigation_help" />
    </fragment>

</navigation>