<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.help.HelpFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingVertical="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:paddingHorizontal="56dp"
                android:scaleType="fitCenter"
                android:src="@drawable/welcome" />

            <TextView
                android:id="@+id/app_hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/hello_text"
                android:textAlignment="textStart"
                android:textIsSelectable="true"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/app_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_app_text"
                android:textAlignment="textStart"
                android:textIsSelectable="true"
                android:textSize="@dimen/text_size_default" />

            <FrameLayout
                android:id="@+id/open_web_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp">

                <include
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    layout="@layout/fragment_home_item"/>
            </FrameLayout>

            <TextView
                android:id="@+id/app_info2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_app_text2"
                android:textAlignment="textStart"
                android:textIsSelectable="true"
                android:layout_marginBottom="@dimen/margin"
                android:textSize="@dimen/text_size_default" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>