<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDialogContainer"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_title"
            android:background="@drawable/dialog_success_background"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/title_rename"
            android:textSize="@dimen/text_size_default"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_input"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18sp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/ic_fill_primary"
            android:textSize="@dimen/text_size_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/dialog_cancel"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_grey"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button"
        android:text="@string/button_cancel"
        app:layout_constraintBottom_toBottomOf="@id/layoutDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_ok"
        app:layout_constraintTop_toBottomOf="@id/layoutDialog"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/dialog_ok"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/btn_aqua"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button"
        android:text="@string/button_ok"
        app:layout_constraintBottom_toBottomOf="@id/layoutDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_cancel"
        app:layout_constraintTop_toBottomOf="@id/layoutDialog"/>
</androidx.constraintlayout.widget.ConstraintLayout>